--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
 	},
 	"lint-staged": {
 		"src/**/*.{js,ts,tsx}": [
-			"yarn pretty",
-			"yarn lint"
+			"yarn lint",
+			"yarn pretty"
 		]
 	},
 	"engines": {
